--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="rating-wrapper wrapper-center" id="thanks-message">
           <img src="./images/illustration-thank-you.svg" alt="" />
           <div class="rating-message">
-            <p id="rating-message">You selected out of 5</p>
+            <p id="rating-message"></p>
           </div>
           <div class="thanks-text">
             <h1>Thank You!</h1>
